# Rust-eCTD

ectd_v4_forge/: .gitignore  COMPASS_LEARNINGS.md  Cargo.toml  docker-compose.yml  refactor.sh  sample_submission.xml
ectd_v4_forge/crates/ectd_api/: Cargo.toml
ectd_v4_forge/crates/ectd_api/src/: lib.rs  main.rs  state.rs
ectd_v4_forge/crates/ectd_api/src/handlers/: mod.rs  submission.rs
ectd_v4_forge/crates/ectd_api/src/routes/: mod.rs
ectd_v4_forge/crates/ectd_app/: Cargo.toml  tauri.conf.json
ectd_v4_forge/crates/ectd_app/src/: commands.rs  main.rs  state.rs
ectd_v4_forge/crates/ectd_app/ui/: package.json
ectd_v4_forge/crates/ectd_app/ui/src/: App.tsx
ectd_v4_forge/crates/ectd_app/ui/src/components/: Dashboard.tsx  InitForm.tsx
ectd_v4_forge/crates/ectd_cli/: Cargo.toml
ectd_v4_forge/crates/ectd_cli/src/: config.rs  main.rs
ectd_v4_forge/crates/ectd_cli/src/commands/: add_doc.rs  export.rs  forge_data.rs  import_standard.rs  ingest.rs  init.rs  migrate.rs  mod.rs  rebuild.rs  validate.rs
ectd_v4_forge/crates/ectd_cli/tests/: end_to_end.rs
ectd_v4_forge/crates/ectd_core/: Cargo.toml
ectd_v4_forge/crates/ectd_core/src/: lib.rs
ectd_v4_forge/crates/ectd_core/src/models/: context_of_use.rs  document.rs  keyword_definition.rs  mod.rs  submission_unit.rs
ectd_v4_forge/crates/ectd_core/src/sdtm/: mod.rs  xpt_v5.rs
ectd_v4_forge/crates/ectd_core/src/validation/: mod.rs  rules.rs  rules_pdf.rs
ectd_v4_forge/crates/ectd_core/tests/: xpt_float_validation.rs
ectd_v4_forge/crates/ectd_db/: Cargo.toml
ectd_v4_forge/crates/ectd_db/migrations/: 0001_init.sql  0002_add_metadata.sql
ectd_v4_forge/crates/ectd_db/schema/: 00_build_order.sql
ectd_v4_forge/crates/ectd_db/schema/content/: 01_documents.sql  02_contexts.sql  03_keywords.sql
ectd_v4_forge/crates/ectd_db/schema/submission/: 01_units.sql
ectd_v4_forge/crates/ectd_db/src/: lib.rs  repository.rs  schema.rs
ectd_v4_forge/crates/ectd_service/: Cargo.toml
ectd_v4_forge/crates/ectd_service/src/: documents.rs  export.rs  lib.rs  submission.rs
ectd_v4_forge/crates/trailblazer_api/: Cargo.toml
ectd_v4_forge/crates/trailblazer_api/src/: main.rs
ectd_v4_forge/crates/trailblazer_app/: Cargo.toml
ectd_v4_forge/crates/trailblazer_app/src/: main.rs
ectd_v4_forge/crates/trailblazer_cli/: Cargo.toml
ectd_v4_forge/crates/trailblazer_cli/src/: main.rs
ectd_v4_forge/crates/trailblazer_compliance/: Cargo.toml
ectd_v4_forge/crates/trailblazer_compliance/src/: lib.rs  submission.rs
ectd_v4_forge/crates/trailblazer_compliance/src/validation/: mod.rs  rules.rs
ectd_v4_forge/crates/trailblazer_core/: Cargo.toml
ectd_v4_forge/crates/trailblazer_core/src/: error.rs  lib.rs
ectd_v4_forge/crates/trailblazer_core/src/inventory/: service.rs
ectd_v4_forge/crates/trailblazer_db/: Cargo.toml
ectd_v4_forge/crates/trailblazer_db/schema/: 00_build_order.sql
ectd_v4_forge/crates/trailblazer_db/schema/bridge/: 01_submission_mappings.sql
ectd_v4_forge/crates/trailblazer_db/schema/content/: 01_documents.sql  02_contexts.sql  03_keywords.sql
ectd_v4_forge/crates/trailblazer_db/schema/core/: 01_departments.sql
ectd_v4_forge/crates/trailblazer_db/schema/foundation/: 01_tenancy.sql
ectd_v4_forge/crates/trailblazer_db/schema/inventory/: 01_categories.sql  02_items.sql
ectd_v4_forge/crates/trailblazer_db/schema/submission/: 01_units.sql
ectd_v4_forge/crates/trailblazer_db/src/: error.rs  lib.rs  repository.rs  schema.rs
ectd_v4_forge/crates/trailblazer_db/src/models/: inventory.rs  mod.rs
ectd_v4_forge/crates/trailblazer_db/src/models/domain/: document.rs  keyword_definition.rs  mod.rs  submission_unit.rs
ectd_v4_forge/crates/trailblazer_db/src/models/entities/: mod.rs
ectd_v4_forge/crates/trailblazer_db/src/models/submission/: context_of_use.rs  document.rs  keyword_definition.rs  mod.rs  submission_unit.rs
ectd_v4_forge/docker/: app.Dockerfile  bootstrap.sh  init.sql
ectd_v4_forge/export_output/: sha256.txt  submissionunit.xml
ectd_v4_forge/standards/: CDASHIG_v2.3.csv  sample_CDASHIG.csv
