[workspace]
members = [
    "crates/ectd_core",
    "crates/ectd_db",
    "crates/ectd_api",
    "crates/ectd_cli",
]
resolver = "2"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "1.10", features = ["serde", "v7", "v4"] }
thiserror = "1.0"
tokio = { version = "1.0", features = ["full"] }
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "uuid", "time"] }
quick-xml = { version = "0.36", features = ["serialize"] }
clap = { version = "4.0", features = ["derive"] }
axum = "0.7"
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1.0"
ectd_core = { path = "crates/ectd_core" }
ectd_db = { path = "crates/ectd_db" }
