[workspace]
members = [
    "crates/ectd_core",
    "crates/ectd_db",
    "crates/ectd_api",
    "crates/ectd_cli",
]
resolver = "2"

[workspace.dependencies]
serde = { version = "1.0.228", features = ["derive"] }
uuid = { version = "1.18.1", features = ["serde", "v7", "v4"] }
thiserror = "2.0.17"
tokio = { version = "1.47.0", features = ["full"] }
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "postgres", "uuid", "time", "macros"] }
quick-xml = { version = "0.36", features = ["serialize"] }
clap = { version = "4.5.53", features = ["derive"] }
axum = "0.7"
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1"
chrono = { version = "0.4.42", features = ["serde"] }
sha2 = "0.10.9"
hex = "0.4"
dotenvy = "0.15.7"
ectd_core = { path = "crates/ectd_core" }
ectd_db = { path = "crates/ectd_db" }
