[workspace]
members = [
    "crates/trailblazer_db",
    "crates/trailblazer_core",
    "crates/trailblazer_compliance",
    "crates/trailblazer_api",
    "crates/trailblazer_cli",
    "crates/trailblazer_app",
]
resolver = "2"

[workspace.dependencies]
serde = { version = "1.0.228", features = ["derive"] }
uuid = { version = "1.18.1", features = ["serde", "v7", "v4"] }
thiserror = "2.0.17"
tokio = { version = "1.47.0", features = ["full"] }
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "postgres", "uuid", "time", "macros"] }
quick-xml = { version = "0.36", features = ["serialize"] }
clap = { version = "4.5.53", features = ["derive"] }
axum = "0.7"
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1"
chrono = { version = "0.4.42", features = ["serde"] }
sha2 = "0.10.9"
hex = "0.4"
dotenvy = "0.15.7"
time = { version = "0.3", features = ["serde", "macros"] }

# AWS SDKs (Bleeding Edge)
aws-config = { version = "1.5.10", features = ["behavior-version-latest"] }
aws-sdk-s3 = "1.65.0"

# Workspace Members
trailblazer_db = { path = "crates/trailblazer_db" }
trailblazer_core = { path = "crates/trailblazer_core" }
trailblazer_compliance = { path = "crates/trailblazer_compliance" }
trailblazer_api = { path = "crates/trailblazer_api" }
trailblazer_cli = { path = "crates/trailblazer_cli" }
