[package]
name = "trailblazer_app"
version = "0.1.0"
edition = "2024"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio.workspace = true
anyhow.workspace = true
sqlx = { workspace = true, features = ["migrate"] }
uuid = { workspace = true, features = ["serde", "v4"] }
aws-config.workspace = true
aws-sdk-s3.workspace = true
trailblazer_compliance.workspace = true
trailblazer_db.workspace = true
trailblazer_core.workspace = true
bollard = "0.19.4"
futures = "0.3.31"
