[package]
name = "trailblazer_db"
version = "0.1.0"
edition = "2021"

[dependencies]
# The Engine
sqlx = { version = "0.8", features = ["runtime-tokio-native-tls", "postgres", "uuid", "time", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["serde", "v4"] }
thiserror = "1.0"
tracing = "0.1"
time = { version = "0.3", features = ["serde"] }
rust-embed = "8.0"
anyhow = "1.0"
quick-xml = { version = "0.36", features = ["serialize"] }
